# nmigen_8080

./: .gitignore  boot.com  cpudiag.asm  ops.py  pyproject.toml  selftest.com  test.asm  test.com
nmigen_8080/: alu.py  bus.py  ops.py  rom.py  top.py
nmigen_8080.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
nmigen_8080/bus/: __init__.py  serial.py
