[tool.poetry]
name = "nmigen_8080"
version = "0.1.0"
description = ""
authors = ["Josh Koike <jk@tilting.me>"]

[tool.poetry.dependencies]
python = "^3.7"
nmigen = { git = "git://github.com/nmigen/nmigen"}
usb_protocol = { git = "git://github.com/usb-tools/python-usb-protocol" }
# luna   = { git = "git://github.com/greatscottgadgets/luna" }
yowasp-nextpnr-ecp5-25k = "*"
yowasp-yosys = "*"
nmigen-yosys = "*"

[tool.poetry.dev-dependencies]
pylint = "^2.6.0"
autopep8 = "^1.5.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
